--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Todo-List-App</title>
-		<link rel="stylesheet" href="b88d04fba731603756b1.css" />
-	<link href="main.css" rel="stylesheet"></head>
+		<link rel="stylesheet" href="../dist/main.css" />
+	</head>
 	<body>
 		<div id="root"></div>
 
-		<script src="a0ecf29abd5a0e6729cf.js" defer></script>
-	<script defer src="main.js"></script></body>
+		<script src="../dist/main.js" defer></script>
+	</body>
 </html>
